@@ -77,6 +77,9 @@ PyKota NEWS :
           
         - Some minor bugs which happened in rare situations were fixed.
         
+        - Support for AppleTalk printers was added, see sample configuration
+          file for details.
+        
     - 1.02 :
     
         - The installation script now checks for software availability
